Fix style for options span — too big margin

--- a/style/Oxygen/Oxygen.css
+++ b/style/Oxygen/Oxygen.css
@@ -347,8 +347,8 @@ C - COMMON CONTENT TYPES (RE-USABLE FORMATS)
 -------------------------------------------------------------*/
 
 .options span {
-	padding: 0 0 0 0.5em;
-	margin: 0 0 0 0.5em;
+	padding: 0 0 0 0.3em;
+	margin: 0 0 0 0.25em;
 }
 
 .options span.first-item {
@@ -830,7 +830,7 @@ a.feed {
 .content-options,
 .ct-options {
 	float: right;
-	margin-top: -2.7em;
+	margin-top: -2.6em;
 	padding: 0.5em 1.417em;
 	position: relative;
 }
